# annatto

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  about.hbs  about.toml  bors.toml  build.rs  clippy.toml  codecov.yml  merge_test.ato  pre-release-hook.sh  release.toml  test_coverage.sh  third-party-licenses.html
.github/workflows/: code_coverage.yml  format.yml  module_docs.yml  release.yml  rust.yml  static_code_analysis.yml
anatto-derive/src/: lib.rs
annatto-derive/: Cargo.toml
docs/: README.md  book.toml
docs/exporters/: conllu.md  exmaralda.md  graphml.md  meta.md  saltxml.md  sequence.md  table.md  textgrid.md  treetagger.md  xlsx.md
docs/graph_ops/: align.md  check.md  chunk.md  collapse.md  diff.md  divide.md  edit.md  enumerate.md  filter.md  link.md  map.md  merge.md  move.md  none.md  revise.md  sleep.md  span.md  split.md  time.md  visualize.md
docs/importers/: conllu.md  exmaralda.md  git.md  graphml.md  meta.md  none.md  opus.md  path.md  ptb.md  relannis.md  saltxml.md  table.md  text.md  textgrid.md  toolbox.md  treetagger.md  webanno.md  whisper.md  xlsx.md  xml.md
docs/src/: README.md  SUMMARY.md  compile.txt  test.txt
docs/src/exporter/: README.md
docs/src/graph_op/: README.md
docs/src/importer/: README.md
docs/src/manipulator/: README.md
py/: CoNLLImporter.py  DummyImporter.py  EXMARaLDAImporter.py  PTBImporter.py  TextgridImporter.py  graphupdate_util.py  import_spreadsheet.py
src/: core.rs  deserialize.rs  documentation_server.rs  documented.rs  error.rs  execution.rs  legacy.rs  lib.rs  models.rs  progress.rs  python.rs  runtime.rs  test_util.rs  util.rs  workflow.rs
src/donothing/: mod.rs
src/estarde/: anno_key.rs  annotation_component.rs  importer_step.rs  mod.rs  query.rs  tests.rs  update_event.rs
src/estarde/snapshots/: annatto__estarde__query__tests__fails.snap  annatto__estarde__query__tests__passes.snap
src/exporter/: conllu.rs  exb.rs  exmaralda.rs  graphml.rs  meta.rs  mod.rs  saltxml.rs  sequence.rs  table.rs  textgrid.rs  treetagger.rs  xlsx.rs
src/exporter/graphml/: tests.rs
src/exporter/saltxml/: corpus_structure.rs  document.rs  tests.rs
src/exporter/snapshots/: annatto__exporter__conllu__tests__conll_to_conll.snap  annatto__exporter__conllu__tests__groupless_tokens.snap  annatto__exporter__conllu__tests__serialize.snap  annatto__exporter__conllu__tests__serialize_custom.snap  annatto__exporter__exmaralda__tests__exmaralda_export.snap  annatto__exporter__exmaralda__tests__exmaralda_export_ordered.snap  annatto__exporter__exmaralda__tests__exmaralda_export_with_audio.snap  annatto__exporter__exmaralda__tests__exmaralda_export_with_generic_metadata.snap  annatto__exporter__exmaralda__tests__flat_data.snap  annatto__exporter__exmaralda__tests__serialize.snap  annatto__exporter__exmaralda__tests__serialize_custom.snap  annatto__exporter__meta__tests__default.snap  annatto__exporter__meta__tests__non_default.snap  annatto__exporter__meta__tests__only.snap  annatto__exporter__meta__tests__serialize.snap  annatto__exporter__meta__tests__serialize_custom.snap  annatto__exporter__meta__tests__with_ns.snap  annatto__exporter__sequence__tests__horizontal.snap  annatto__exporter__sequence__tests__serialize.snap  annatto__exporter__sequence__tests__serialize_custom.snap  annatto__exporter__sequence__tests__vertical.snap  annatto__exporter__sequence__tests__with_virtual_tokens.snap  annatto__exporter__table__tests__core.snap  annatto__exporter__table__tests__custom.snap  (+23 more)
src/exporter/treetagger/: tests.rs
src/importer/: corpus_annotations.rs  exb.rs  file_nodes.rs  git.rs  graphml.rs  meta.rs  metadata.rs  mod.rs  paulaxml.rs  ptb.rs  python.rs  relannis.rs  saltxml.rs  spreadsheet.rs  table.rs  text.rs  textgrid.pest  textgrid.rs  toolbox.rs  treetagger.rs  webanno.rs  whisper.rs  xlsx.rs
src/legacy/: exporter.rs  importer.rs  mapping.rs  salt.rs
src/manipulator/: align.rs  annis_compat.rs  check.rs  chunker.rs  collapse.rs  diff.rs  divide.rs  dot.rs  edit.rs  enumerate.rs  filter.rs  link.rs  link_nodes.rs  map.rs  map_annos.rs  merge.rs  merger.rs  mod.rs  mv.rs  no_op.rs  re.rs  sleep.rs  span.rs  split.rs  time.rs  visualize.rs
src/models/: textgrid.pest  textgrid.rs
src/modules/: donothing.rs  graphml.rs  mod.rs
src/python/: graph.rs
src/snapshots/: annatto__tests__deserialize_with_generic_config.snap  annatto__util__tests__is_effective.snap  annatto__workflow__tests__customized_import.snap  annatto__workflow__tests__env_var_with_non_ascii.snap  annatto__workflow__tests__load_and_save.snap  annatto__workflow__tests__load_fail_disk_data.snap  annatto__workflow__tests__load_fail_disk_mode.snap  annatto__workflow__tests__load_save_saved_files.snap  annatto__workflow__tests__save_and_load_progress.snap  annatto__workflow__tests__save_into_locked_db.snap  annatto__workflow__tests__serialize_workflow.snap  annatto__workflow__tests__warn_on_save_target_with_data.snap  annatto__workflow__tests__with_env_recursive.snap  annatto__workflow__tests__with_env_repetition.snap
src/util/: documentation.rs  example_generator.rs  graphupdate.rs  sort_matches.rs  token_helper.rs  xml.rs
test-corpora/: .gitignore  exb2graphml.pepper
tests/: cli.rs  legacy-workflow.rs
tests/deser/: deser_graph_op.toml  deser_graph_op_fail.toml  deser_read_from.toml  deser_read_from_fail.toml  deser_write_as.toml  deser_write_as_fail.toml  workflow-with-custom-labels.toml  workflow-with-generic-config.toml
tests/snapshots/: cli__graph_op_info.snap  cli__list_modules.snap  cli__module_info.snap  cli__module_info_relannis.snap  cli__run_and_serialize.snap  cli__run_empty_conversion-2.snap  cli__run_empty_conversion.snap  cli__run_empty_conversion_abs_path.snap  cli__run_failing_conversion-2.snap  cli__run_failing_conversion.snap  cli__show_help.snap  cli__unknown_module_info.snap  cli__write_documentation.snap
tests/workflows/: complex_all_attributes.toml  complex_some_attributes.toml  convert_to_itself.toml  multiple_importer.toml  nonexisting_dir.toml  relannis.toml  visualize_full.toml  visualize_limit.toml
(+483 files in other folders)
