[package]
authors = ["Thomas Krause <thomas.krause@hu-berlin.de>", "Martin Klotz <martin.klotz@hu-berlin.de>"]
description = "Converts linguistic data formats based on the graphANNIS data model as intermediate representation and can apply consistency tests."
edition = "2018"
homepage = "https://github.com/korpling/annatto/"
license = "Apache-2.0"
name = "annatto"
repository = "https://github.com/korpling/annatto/"
version = "0.5.0"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
console = "0.15"
csv = "1.1"
encoding_rs = "0.8"
encoding_rs_io = "0.1.7"
glob = "0.3"
graphannis = "3.1"
graphannis-core = "3.1"
indicatif = "0.17"
itertools = "0.12"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
log = "0.4"
normpath = "1.1"
ordered-float = {version = "4.1", default-features = false}
pathdiff = "0.2"
pest = "2.7"
pest_derive = "2.0"
quick-xml = "0.31"
rayon = "1.1"
regex = "1.4"
serde = "1.0"
serde_derive = "1.0"
tabled = {version = "0.14", features = ["color"]}
tempfile = "3"
text-splitter = "0.6.3"
thiserror = "1.0"
toml = "0.8.0"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
umya-spreadsheet = "~1.1.1"
xml-rs = "0.8"

[dev-dependencies]
assert_cmd = "2.0.11"
insta = {version = "1.26.0", features = ["toml", "redactions"]}
pretty_assertions = "1.3"
ureq = {version = "2.7.1", default-features = false}

# Compile some of the dependencies in release mode if when we are ourself in
# "dev" mode (like building debug binaries or running tests)
[profile.dev.package]
graphannis-core.opt-level = 3
graphannis.opt-level = 3
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

# generated by 'cargo dist init'
[profile.dist]
debug = true
inherits = "release"
split-debuginfo = "packed"

# Config for 'cargo dist'
[workspace.metadata.dist]
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# Publish jobs to run in CI
pr-run-mode = "plan"
