[package]
authors = [
    "Thomas Krause <thomas.krause@hu-berlin.de>",
    "Martin Klotz <martin.klotz@hu-berlin.de>",
]
description = "Converts linguistic data formats based on the graphANNIS data model as intermediate representation and can apply consistency tests."
edition = "2024"
homepage = "https://github.com/korpling/annatto/"
license = "Apache-2.0"
name = "annatto"
repository = "https://github.com/korpling/annatto/"
version = "0.43.1"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
bimap = "0.6.3"
clap = { version = "4.0", features = ["derive", "env"] }
console = "0.15"
csv = "1.3"
edit-xlsx = "0.4.6"
encoding_rs = "0.8"
encoding_rs_io = "0.1.7"
facet = "0.28.0"
facet-reflect = "0.28.0"
git2 = { version = "0.20.2", default-features = false }
glob = "0.3"
graphannis = "4.0.0"
graphannis-core = "4.0.0"
graphviz-rust = "0.9.0"
indicatif = "0.17"
itertools = "0.12"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.4"
log = "0.4"
lru = "0.14.0"
nonzero = "0.2.0"
normpath = "1.1"
ordered-float = { version = "4.1", default-features = false }
pathdiff = "0.2"
percent-encoding = "2.3.1"
pest = "2.7.14"
pest_derive = "2.0"
quick-xml = "0.34"
rayon = "1.1"
regex = "1.12"
roxmltree = "0.20.0"
rust_xlsxwriter = "0.90.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.138"
sheets-diff = "1.1.3"
tabled = { version = "0.15", features = ["ansi"] }
tempfile = "3"
termimad = "0.30"
text-splitter = "0.6.3"
thiserror = "1.0"
tokenizations = "0.4.2"
toml = "0.8.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
umya-spreadsheet = "2.3.3"
url = "2.5.2"
xml-rs = "0.8"
zip = "0.6.6"

[dev-dependencies]
assert_cmd = "2.1"
insta = { version = "1.26.0", features = ["toml", "filters"] }
pretty_assertions = "1.3"
sha2 = "0.10.9"


# Compile some of the dependencies in release mode if when we are ourself in
# "dev" mode (like building debug binaries or running tests)
[profile.dev.package]
graphannis-core.opt-level = 3
graphannis.opt-level = 3
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

# generated by 'cargo dist init'
[profile.dist]
debug = true
inherits = "release"
split-debuginfo = "packed"

# Config for 'dist'
[workspace.metadata.dist]
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.2"
# Which actions to run on pull requests
pr-run-mode = "plan"

[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-22.04"
x86_64-unknown-linux-gnu = "ubuntu-22.04"
